--- a/index.html
+++ b/index.html
@@ -4840,7 +4840,13 @@
         <header id="header">
           <div id="headerInner">
             <a id="headerLink" href="/" title="homepage">
-              <img src="/ruk_logo.png" alt="vibit" />
+              <img
+                src="/ruk_logo.png"
+                alt="vibit"
+                height="30px"
+                width="auto !important"
+                style="height: 30px; width: auto !important"
+              />
             </a>
 
             <nav id="headerNav">
@@ -10041,7 +10047,7 @@
               >
             </div>
             <div id="footerLogo">
-              <img src="/ruk_logo.png" alt="vibit" />
+              <img src="/ruk_logo_1.png" alt="vibit" />
             </div>
           </div>
 
